--- a/project/i18n/da.po
+++ b/project/i18n/da.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-09-14 16:18+0000\n"
+"Last-Translator: Per G. Rasmussen <pgr@msteknik.dk>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:16+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-09-15 06:11+0000\n"
+"X-Generator: Launchpad (build 16761)\n"
 
 #. module: project
 #: view:project.project:0
 msgid "Email Interface"
-msgstr ""
+msgstr "Email Interface"
 
 #. module: project
 #: help:account.analytic.account,use_tasks:0
@@ -28,13 +28,15 @@ msgid ""
 "If checked, this contract will be available in the project menu and you will "
 "be able to manage tasks or track issues"
 msgstr ""
+"Hvis afmærket, vil kontrakten være tilgængelig i projektmenuen, og du kan "
+"oprette opgaver og følge sager"
 
 #. module: project
 #: field:project.project,progress_rate:0
 #: view:report.project.task.user:0
 #: field:report.project.task.user,progress:0
 msgid "Progress"
-msgstr ""
+msgstr "Fremdrift"
 
 #. module: project
 #: model:process.node,name:project.process_node_taskbydelegate0
@@ -44,85 +46,85 @@ msgstr ""
 #. module: project
 #: view:project.project:0
 msgid "Parent"
-msgstr ""
+msgstr "Overordnet"
 
 #. module: project
 #: model:ir.actions.act_window,name:project.dblc_proj
 msgid "Project's tasks"
-msgstr ""
+msgstr "Projekt opgaver"
 
 #. module: project
 #: field:project.task.type,name:0
 msgid "Stage Name"
-msgstr ""
+msgstr "Fase navn"
 
 #. module: project
 #: model:process.transition.action,name:project.process_transition_action_openpendingtask0
 msgid "Set pending"
-msgstr ""
+msgstr "Sæt til igang"
 
 #. module: project
 #: view:project.project:0
 msgid "New Project Based on Template"
-msgstr ""
+msgstr "Nyt projekt baseret på skabelon"
 
 #. module: project
 #: view:report.project.task.user:0
 #: field:report.project.task.user,day:0
 msgid "Day"
-msgstr ""
+msgstr "Dag"
 
 #. module: project
 #: model:project.task.type,name:project.project_tt_merge
 msgid "Merge"
-msgstr ""
+msgstr "Flet"
 
 #. module: project
 #: view:res.partner:0
 msgid "Start Task"
-msgstr ""
+msgstr "Opgave"
 
 #. module: project
 #: code:addons/project/project.py:944
 #, python-format
 msgid "Warning !"
-msgstr ""
+msgstr "Advarsel!"
 
 #. module: project
 #: help:project.project,message_unread:0
 #: help:project.task,message_unread:0
 msgid "If checked new messages require your attention."
-msgstr ""
+msgstr "Hvis afmærket, kræver nye beskeder din attention"
 
 #. module: project
 #: model:process.node,name:project.process_node_donetask0
 msgid "Done task"
-msgstr ""
+msgstr "Udført opgave"
 
 #. module: project
 #: model:process.node,note:project.process_node_donetask0
 msgid "Task is Completed"
-msgstr ""
+msgstr "Opgave er udført"
 
 #. module: project
 #: view:res.partner:0
 msgid "False"
-msgstr ""
+msgstr "Forkert"
 
 #. module: project
 #: model:project.task.type,name:project.project_tt_testing
 msgid "Testing"
-msgstr ""
+msgstr "Afprøver"
 
 #. module: project
 #: model:ir.model,name:project.model_account_analytic_account
 msgid "Analytic Account"
-msgstr ""
+msgstr "Analyse konto"
 
 #. module: project
 #: field:project.config.settings,group_time_work_estimation_tasks:0
 msgid "Manage time estimation on tasks"
-msgstr ""
+msgstr "Håndter tidsestimering på opgaver"
 
 #. module: project
 #: help:project.project,message_summary:0
@@ -131,50 +133,52 @@ msgid ""
 "Holds the Chatter summary (number of messages, ...). This summary is "
 "directly in html format in order to be inserted in kanban views."
 msgstr ""
+"Indeholder chat sammendraget (antal beskeder). Dette sammendrag er i html "
+"format for at kunne sættes ind i kanban views."
 
 #. module: project
 #: code:addons/project/project.py:444
 #: code:addons/project/project.py:1332
 #, python-format
 msgid "Warning!"
-msgstr ""
+msgstr "Advarsel!"
 
 #. module: project
 #: model:ir.model,name:project.model_res_partner
 msgid "Partner"
-msgstr ""
+msgstr "Kontakt"
 
 #. module: project
 #: field:project.config.settings,group_manage_delegation_task:0
 msgid "Allow task delegation"
-msgstr ""
+msgstr "Tillad opgave delegering"
 
 #. module: project
 #: field:project.task.delegate,planned_hours:0
 #: view:report.project.task.user:0
 #: field:report.project.task.user,hours_planned:0
 msgid "Planned Hours"
-msgstr ""
+msgstr "Planlagte timer"
 
 #. module: project
 #: view:project.project:0
 msgid "Reset as Project"
-msgstr ""
+msgstr "Reset tilbage til Projekt"
 
 #. module: project
 #: view:report.project.task.user:0
 msgid "In progress tasks"
-msgstr ""
+msgstr "Igangværende opgaver"
 
 #. module: project
 #: help:project.project,progress_rate:0
 msgid "Percent of tasks closed according to the total of tasks todo."
-msgstr ""
+msgstr "Procentandel af lukkede opgaver i forhold til alle opgaver."
 
 #. module: project
 #: model:ir.actions.client,name:project.action_client_project_menu
 msgid "Open Project Menu"
-msgstr ""
+msgstr "Åbn projekt menuen"
 
 #. module: project
 #: model:ir.actions.act_window,help:project.action_project_task_user_tree
@@ -192,14 +196,14 @@ msgstr ""
 #. module: project
 #: model:res.groups,name:project.group_delegate_task
 msgid "Task Delegation"
-msgstr ""
+msgstr "Opgave delegering"
 
 #. module: project
 #: field:project.project,planned_hours:0
 #: field:project.task.history,planned_hours:0
 #: field:project.task.history.cumulative,planned_hours:0
 msgid "Planned Time"
-msgstr ""
+msgstr "Planlagt tid"
 
 #. module: project
 #: view:project.task:0
@@ -213,12 +217,12 @@ msgstr ""
 #: selection:report.project.task.user,state:0
 #: view:res.partner:0
 msgid "Done"
-msgstr ""
+msgstr "Udført"
 
 #. module: project
 #: model:project.category,name:project.project_category_01
 msgid "Contact's suggestion"
-msgstr ""
+msgstr "Kontaktperson forslag"
 
 #. module: project
 #: help:project.config.settings,group_time_work_estimation_tasks:0
@@ -228,26 +232,26 @@ msgstr ""
 #. module: project
 #: field:report.project.task.user,user_id:0
 msgid "Assigned To"
-msgstr ""
+msgstr "Tildelt"
 
 #. module: project
 #: model:mail.message.subtype,name:project.mt_project_task_closed
 #: model:mail.message.subtype,name:project.mt_task_closed
 msgid "Task Done"
-msgstr ""
+msgstr "Opgave udført"
 
 #. module: project
 #: view:project.project:0
 #: view:report.project.task.user:0
 #: field:report.project.task.user,partner_id:0
 msgid "Contact"
-msgstr ""
+msgstr "Kontakt"
 
 #. module: project
 #: model:process.transition,name:project.process_transition_delegate0
 #: view:project.task:0
 msgid "Delegate"
-msgstr ""
+msgstr "Uddelegér"
 
 #. module: project
 #: model:ir.actions.act_window,name:project.open_view_template_project
