--- a/purchase/i18n/da.po
+++ b/purchase/i18n/da.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-09-13 21:04+0000\n"
+"PO-Revision-Date: 2013-09-14 08:39+0000\n"
 "Last-Translator: Per G. Rasmussen <pgr@msteknik.dk>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-14 05:53+0000\n"
+"X-Launchpad-Export-Date: 2013-09-15 06:11+0000\n"
 "X-Generator: Launchpad (build 16761)\n"
 
 #. module: purchase
@@ -123,7 +123,7 @@ msgstr "Du skal først annullere alle modtagelser på denne indkøbsordre."
 #: model:ir.model,name:purchase.model_res_partner
 #: field:purchase.order.line,partner_id:0
 msgid "Partner"
-msgstr ""
+msgstr "Partner"
 
 #. module: purchase
 #: field:purchase.report,negociation:0
@@ -526,12 +526,12 @@ msgstr ""
 #. module: purchase
 #: model:mail.message.subtype,name:purchase.mt_rfq_approved
 msgid "RFQ Approved"
-msgstr ""
+msgstr "Tilbud bekræftet"
 
 #. module: purchase
 #: view:purchase.config.settings:0
 msgid "Apply"
-msgstr ""
+msgstr "Tilføj"
 
 #. module: purchase
 #: field:purchase.order,amount_untaxed:0
@@ -612,12 +612,12 @@ msgstr "Indkøbsordre i kladde-status"
 #. module: purchase
 #: view:product.product:0
 msgid "Suppliers"
-msgstr ""
+msgstr "Leverandører"
 
 #. module: purchase
 #: view:product.product:0
 msgid "To Purchase"
-msgstr ""
+msgstr "Indkøbes"
 
 #. module: purchase
 #: model:ir.actions.act_window,help:purchase.purchase_form_action
@@ -639,7 +639,7 @@ msgstr ""
 #. module: purchase
 #: view:purchase.order.line:0
 msgid "Invoices and Receptions"
-msgstr ""
+msgstr "Fakturaer og varemodtagelser"
 
 #. module: purchase
 #: model:process.transition,note:purchase.process_transition_packinginvoice0
@@ -647,23 +647,25 @@ msgid ""
 "A Pick list generates an invoice. Depending on the Invoicing control of the "
 "sales order, the invoice is based on delivered or on ordered quantities."
 msgstr ""
+"En plukliste danner en faktura. Afhængig af faktura-reglerne på salgsordre, "
+"dannes fakturaen ud fra leveret eller bestilt antal."
 
 #. module: purchase
 #: view:purchase.report:0
 #: field:purchase.report,nbr:0
 msgid "# of Lines"
-msgstr ""
+msgstr "# linjer"
 
 #. module: purchase
 #: code:addons/purchase/wizard/purchase_line_invoice.py:106
 #, python-format
 msgid "Define expense account for this product: \"%s\" (id:%d)."
-msgstr ""
+msgstr "Definer udgiftskonto for denne vare: \"%s\" (id:%d)."
 
 #. module: purchase
 #: view:purchase.order:0
 msgid "(update)"
-msgstr ""
+msgstr "Opdater (-ing)"
 
 #. module: purchase
 #: view:purchase.order:0
@@ -1257,6 +1259,8 @@ msgid ""
 "a draft\n"
 "                        purchase order"
 msgstr ""
+"et udkast\n"
+"                        indkøbsordre"
 
 #. module: purchase
 #: code:addons/purchase/purchase.py:322
@@ -1413,7 +1417,7 @@ msgstr "Konfigurér indkøb"
 #. module: purchase
 #: view:purchase.order:0
 msgid "Untaxed"
-msgstr ""
+msgstr "uden moms"
 
 #. module: purchase
 #: model:process.transition,name:purchase.process_transition_createpackinglist0
@@ -1795,12 +1799,12 @@ msgstr "Wizard til at skrive Email"
 #. module: purchase
 #: report:purchase.quotation:0
 msgid "Tel.:"
-msgstr ""
+msgstr "Tel.:"
 
 #. module: purchase
 #: view:purchase.order:0
 msgid "Resend Purchase Order"
-msgstr ""
+msgstr "Genfremsend indkøbsordren"
 
 #. module: purchase
 #: report:purchase.order:0
@@ -1822,12 +1826,12 @@ msgstr "Bekræft"
 #. module: purchase
 #: selection:purchase.config.settings,default_invoice_method:0
 msgid "Based on receptions"
-msgstr ""
+msgstr "Baseret på modtagelser"
 
 #. module: purchase
 #: field:purchase.order,partner_ref:0
 msgid "Supplier Reference"
-msgstr ""
+msgstr "Leverandør reference"
 
 #. module: purchase
 #: model:process.transition,note:purchase.process_transition_productrecept0
@@ -1836,11 +1840,13 @@ msgid ""
 "of the purchase order, the invoice is based on received or on ordered "
 "quantities."
 msgstr ""
+"En plukliste danner en leverandørfaktura. Afhængig af opsætningen på "
+"indkøbsordren, baseres fakturaen på modtaget eller bestilt antal."
 
 #. module: purchase
 #: field:purchase.order,message_follower_ids:0
 msgid "Followers"
-msgstr ""
+msgstr "Followers"
 
 #. module: purchase
 #: help:purchase.config.settings,module_purchase_requisition:0
@@ -1852,11 +1858,16 @@ msgid ""
 "            to one supplier or if you want a purchase requisition to "
 "negotiate with several suppliers."
 msgstr ""
+"Indkøbsordrer bruges, når du ønsker tilbud fra flere leverandører på "
+"bestemte varer.\n"
+"            Du kan på hver vare angive, om du ønsker tilbud fra en bestemt "
+"leverandør\n"
+"            eller tilbud fra flere leverandører."
 
 #. module: purchase
 #: field:purchase.order.line,invoice_lines:0
 msgid "Invoice Lines"
-msgstr ""
+msgstr "Faktura linier"
 
 #. module: purchase
 #: model:ir.actions.act_window,help:purchase.action_purchase_order_report_all
@@ -1865,32 +1876,35 @@ msgid ""
 "purchase history and performance. From this menu you can track your "
 "negotiation performance, the delivery performance of your suppliers, etc."
 msgstr ""
+"Indkøbsanalyse gør det muligt nemt at tjekke firmaets indkøbshistori og "
+"indkøbsperformance. Fra denne menu kan du følge din forhandlingsperformance "
+"og leverandørernes leveringsperformance."
 
 #. module: purchase
 #: model:email.template,report_name:purchase.email_template_edi_purchase
 msgid "RFQ_${(object.name or '').replace('/','_')}"
-msgstr ""
+msgstr "RFQ_${(object.name or '').replace('/','_')}"
 
 #. module: purchase
 #: code:addons/purchase/purchase.py:982
 #, python-format
 msgid "The selected supplier only sells this product by %s"
-msgstr ""
+msgstr "Den valgte leverandør sælger kun varen ved %s"
 
 #. module: purchase
 #: model:process.transition.action,name:purchase.process_transition_action_invoicefrompurchaseorder0
 msgid "Create invoice"
-msgstr ""
+msgstr "Dan faktura"
 
 #. module: purchase
 #: field:purchase.order.line,move_dest_id:0
 msgid "Reservation Destination"
-msgstr ""
+msgstr "Reservations destination"
 
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_purchase_config_purchase
 msgid "Configuration"
-msgstr ""
+msgstr "Konfiguration"
 
 #. module: purchase
 #: help:purchase.config.settings,module_purchase_double_validation:0
@@ -1904,25 +1918,25 @@ msgstr ""
 #: code:addons/purchase/edi/purchase_order.py:132
 #, python-format
 msgid "EDI Pricelist (%s)"
-msgstr ""
+msgstr "EDI prisliste (%s)"
 
 #. module: purchase
 #: view:purchase.report:0
 #: field:purchase.report,product_uom:0
 msgid "Reference Unit of Measure"
-msgstr ""
+msgstr "Reference enhed"
 
 #. module: purchase
 #: report:purchase.order:0
 #: field:purchase.report,validator:0
 msgid "Validated By"
-msgstr ""
+msgstr "Kontrolleret af"
 
 #. module: purchase
 #: view:purchase.report:0
 #: field:purchase.report,delay_pass:0
 msgid "Days to Deliver"
-msgstr ""
+msgstr "Dage til levering"
 
 #. module: purchase
 #: selection:purchase.report,month:0
@@ -1943,22 +1957,22 @@ msgstr "December"
 #. module: purchase
 #: view:purchase.report:0
 msgid "Total Orders Lines by User per month"
-msgstr ""
+msgstr "Alle ordrelinier pr. bruger pr. måned"
 
 #. module: purchase
 #: help:purchase.order,amount_untaxed:0
 msgid "The amount without tax"
-msgstr ""
+msgstr "Beløbet uden moms"
 
 #. module: purchase
 #: model:process.node,note:purchase.process_node_packinglist0
 msgid "List of ordered products."
-msgstr ""
+msgstr "Liste over bestilte varer."
 
 #. module: purchase
 #: view:purchase.order:0
 msgid "Incoming Shipments & Invoices"
-msgstr ""
+msgstr "Indkommende leverancer og fakturaer"
 
 #. module: purchase
 #: selection:purchase.order,state:0
@@ -1968,7 +1982,7 @@ msgstr "Afventer godkendelse"
 #. module: purchase
 #: help:purchase.order,amount_total:0
 msgid "The total amount"
-msgstr ""
+msgstr "Samlet beløb"
 
 #. module: purchase
 #: field:purchase.order,invoiced_rate:0
@@ -1981,27 +1995,27 @@ msgstr "Faktureret"
 #: view:purchase.order.line:0
 #: field:stock.move,purchase_line_id:0
 msgid "Purchase Order Line"
-msgstr ""
+msgstr "Indkøbsordrelinie"
 
 #. module: purchase
 #: selection:purchase.order.line,state:0
 msgid "Draft"
-msgstr ""
+msgstr "Kladde"
 
 #. module: purchase
 #: model:ir.model,name:purchase.model_purchase_order_group
 msgid "Purchase Order Merge"
-msgstr ""
+msgstr "Indkøbsordre sammenlægning"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.action_email_templates
 msgid "Email Templates"
-msgstr ""
+msgstr "Email Templates"
 
 #. module: purchase
 #: model:res.groups,name:purchase.group_purchase_user
 msgid "User"
-msgstr ""
+msgstr "Bruger"
 
 #. module: purchase
 #: selection:purchase.report,month:0
@@ -2011,12 +2025,12 @@ msgstr "November"
 #. module: purchase
 #: view:purchase.order.line:0
 msgid "Manual Invoices"
-msgstr ""
+msgstr "Manuelle fakturaer"
 
 #. module: purchase
 #: report:purchase.order:0
 msgid "Our Order Reference"
-msgstr ""
+msgstr "Deres ordre reference"
 
 #. module: purchase
 #: selection:purchase.report,month:0
@@ -2036,38 +2050,38 @@ msgstr ""
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_partner_categories_in_form
 msgid "Partner Categories"
-msgstr ""
+msgstr "Kontakt kategorier"
 
 #. module: purchase
 #: field:purchase.report,state:0
 msgid "Order Status"
-msgstr ""
+msgstr "Ordre status"
 
 #. module: purchase
 #: report:purchase.order:0
 msgid "Request for Quotation N°"
-msgstr ""
+msgstr "Anmodning om tilbud°"
 
 #. module: purchase
 #: view:purchase.config.settings:0
 msgid "Invoicing Settings"
-msgstr ""
+msgstr "Fakturerings opsætninger"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.action_purchase_order_by_user_all
 msgid "Total Orders by User per month"
-msgstr ""
+msgstr "Antal ordrer pr. bruger pr. måned"
 
 #. module: purchase
 #: selection:purchase.order,invoice_method:0
 msgid "Based on incoming shipments"
-msgstr ""
+msgstr "Baseret på indkommende leverancer"
 
 #. module: purchase
 #: code:addons/purchase/purchase.py:1044
 #, python-format
 msgid "No default supplier defined for this product"
-msgstr ""
+msgstr "Der er ikke opsat standard leverandør på denne vare"
 
 #. module: purchase
 #: view:purchase.report:0
@@ -2082,6 +2096,7 @@ msgid ""
 "The selected supplier has a minimal quantity set to %s %s, you should not "
 "purchase less."
 msgstr ""
+"Den valgte leverandør kræver minimumskøb på %s %s, du kan ikke købe mindre."
 
 #. module: purchase
 #: report:purchase.order:0
@@ -2093,7 +2108,7 @@ msgstr "Beskrivelse:"
 #. module: purchase
 #: report:purchase.quotation:0
 msgid "Expected Delivery address:"
-msgstr ""
+msgstr "Forventet leveringsadresse"
 
 #. module: purchase
 #: model:email.template,body_html:purchase.email_template_edi_purchase
@@ -2191,27 +2206,27 @@ msgstr ""
 #: model:ir.actions.act_window,name:purchase.action_purchase_order_report_all
 #: model:ir.ui.menu,name:purchase.menu_action_purchase_order_report_all
 msgid "Purchase Analysis"
-msgstr ""
+msgstr "Indkøbs analyse"
 
 #. module: purchase
 #: report:purchase.order:0
 msgid "Your Order Reference"
-msgstr ""
+msgstr "Deres ordrereference"
 
 #. module: purchase
 #: report:purchase.order:0
 msgid "Purchase Order Confirmation N°"
-msgstr ""
+msgstr "Indkøbsordre bekræftelse N°"
 
 #. module: purchase
 #: view:purchase.order:0
 msgid "Total amount"
-msgstr ""
+msgstr "Samlet beløb"
 
 #. module: purchase
 #: model:ir.model,name:purchase.model_product_template
 msgid "Product Template"
-msgstr ""
+msgstr "Produktskabelon"
 
 #. module: purchase
 #: view:purchase.order.group:0
@@ -2243,12 +2258,12 @@ msgstr ""
 #. module: purchase
 #: field:purchase.order,payment_term_id:0
 msgid "Payment Term"
-msgstr ""
+msgstr "Betalingsbetingelse"
 
 #. module: purchase
 #: view:purchase.order:0
 msgid "Purchase orders which are in draft state"
-msgstr ""
+msgstr "Indkøbsordrer i kladde-status"
 
 #. module: purchase
 #: view:purchase.report:0
@@ -2259,7 +2274,7 @@ msgstr "År"
 #. module: purchase
 #: selection:purchase.config.settings,default_invoice_method:0
 msgid "Based on purchase order lines"
-msgstr ""
+msgstr "Baseret på indkøbsordrelinier"
 
 #. module: purchase
 #: model:ir.actions.act_window,help:purchase.act_res_partner_2_purchase_order
