--- a/portal/i18n/hr.po
+++ b/portal/i18n/hr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-09-18 14:13+0000\n"
-"Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
+"PO-Revision-Date: 2013-09-19 13:37+0000\n"
+"Last-Translator: Marko Carevic <Unknown>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-19 04:56+0000\n"
+"X-Launchpad-Export-Date: 2013-09-20 06:01+0000\n"
 "X-Generator: Launchpad (build 16765)\n"
 
 #. module: portal
@@ -46,7 +46,7 @@ msgstr ""
 #. module: portal
 #: model:mail.group,name:portal.company_jobs
 msgid "Company Jobs"
-msgstr ""
+msgstr "Poslovi u tvrtci"
 
 #. module: portal
 #: model:ir.ui.menu,name:portal.portal_orders
@@ -61,7 +61,7 @@ msgstr "Kontakti"
 #. module: portal
 #: view:portal.wizard:0
 msgid "This text is included in the email sent to new portal users."
-msgstr ""
+msgstr "Ovaj tekst je uključen u email poslan novim korisnicima portala."
 
 #. module: portal
 #: view:share.wizard:0
@@ -72,7 +72,7 @@ msgstr "Postojeće grupe"
 #. module: portal
 #: view:res.groups:0
 msgid "Portal Groups"
-msgstr ""
+msgstr "Grupe portala"
 
 #. module: portal
 #: code:addons/portal/mail_mail.py:52
