--- a/account_asset/i18n/bs.po
+++ b/account_asset/i18n/bs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-10-28 10:25+0000\n"
+"PO-Revision-Date: 2013-10-29 18:55+0000\n"
 "Last-Translator: Bosko Stojakovic <bluesoft83@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-29 05:14+0000\n"
-"X-Generator: Launchpad (build 16818)\n"
+"X-Launchpad-Export-Date: 2013-10-30 05:54+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: account_asset
 #: view:account.asset.asset:0
@@ -295,6 +295,7 @@ msgid ""
 "Prorata temporis can be applied only for time method \"number of "
 "depreciations\"."
 msgstr ""
+"Prorate temporis može biti primjenjena samo za metodu \"broj amortizacija\"."
 
 #. module: account_asset
 #: field:account.asset.depreciation.line,remaining_value:0
@@ -543,7 +544,7 @@ msgstr "Opšte"
 #: field:account.asset.asset,prorata:0
 #: field:account.asset.category,prorata:0
 msgid "Prorata Temporis"
-msgstr ""
+msgstr "Prorata Temporis"
 
 #. module: account_asset
 #: model:ir.model,name:account_asset.model_account_invoice
@@ -743,27 +744,27 @@ msgstr "Iznos stavki amortizacija"
 #: code:addons/account_asset/wizard/wizard_asset_compute.py:50
 #, python-format
 msgid "Created Asset Moves"
-msgstr ""
+msgstr "Kreirana kretanja amortizacije"
 
 #. module: account_asset
 #: view:account.asset.asset:0
 msgid "Add an internal note here..."
-msgstr ""
+msgstr "Dodaj internu zabilješku ovdje..."
 
 #. module: account_asset
 #: field:account.asset.depreciation.line,sequence:0
 msgid "Sequence"
-msgstr ""
+msgstr "Sekvenca"
 
 #. module: account_asset
 #: help:account.asset.category,method_period:0
 msgid "State here the time between 2 depreciations, in months"
-msgstr ""
+msgstr "Ovdje navedite vrijeme između dvije amortizacije, u mjesecima"
 
 #. module: account_asset
 #: field:account.asset.history,date:0
 msgid "Date"
-msgstr ""
+msgstr "Datum"
 
 #. module: account_asset
 #: field:account.asset.asset,method_number:0
@@ -774,20 +775,20 @@ msgstr ""
 #: selection:account.asset.history,method_time:0
 #: field:asset.modify,method_number:0
 msgid "Number of Depreciations"
-msgstr ""
+msgstr "Broj amortizacija"
 
 #. module: account_asset
 #: view:account.asset.asset:0
 msgid "Create Move"
-msgstr ""
+msgstr "Kreiraj kretanje"
 
 #. module: account_asset
 #: view:account.asset.asset:0
 msgid "Confirm Asset"
-msgstr ""
+msgstr "Potvrdi osnovno sredstvo"
 
 #. module: account_asset
 #: model:ir.actions.act_window,name:account_asset.action_account_asset_asset_tree
 #: model:ir.ui.menu,name:account_asset.menu_action_account_asset_asset_tree
 msgid "Asset Hierarchy"
-msgstr ""
+msgstr "Hijerarhija osnovnog sredstva"
