--- a/account/i18n/ja.po
+++ b/account/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-10-30 08:42+0000\n"
+"PO-Revision-Date: 2013-10-31 15:20+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-31 05:47+0000\n"
+"X-Launchpad-Export-Date: 2013-11-01 06:27+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: account
@@ -50,7 +50,7 @@ msgstr "仕訳帳エントリーの消し込み"
 #: view:account.bank.statement:0
 #: view:account.move.line:0
 msgid "Account Statistics"
-msgstr "アカウントの統計情報"
+msgstr "勘定統計"
 
 #. module: account
 #: view:account.invoice:0
@@ -698,7 +698,7 @@ msgstr ""
 #. module: account
 #: model:ir.model,name:account.model_report_account_type_sales
 msgid "Report of the Sales by Account Type"
-msgstr "アカウントタイプ別売上レポート"
+msgstr "勘定タイプ別売上レポート"
 
 #. module: account
 #: code:addons/account/account.py:3201
@@ -799,7 +799,7 @@ msgstr "総勘定元帳レポート"
 #. module: account
 #: view:account.invoice:0
 msgid "Re-Open"
-msgstr "再度開く"
+msgstr "再開"
 
 #. module: account
 #: view:account.use.model:0
@@ -1315,7 +1315,7 @@ msgstr "税コードテンプレート"
 #. module: account
 #: view:account.invoice.cancel:0
 msgid "Cancel Invoices"
-msgstr "請求書のキャンセル"
+msgstr "請求書取消"
 
 #. module: account
 #: help:account.journal,code:0
@@ -5741,7 +5741,7 @@ msgstr "アカウント共通アカウントレポート"
 #: selection:account.period,state:0
 #: selection:report.invoice.created,state:0
 msgid "Open"
-msgstr "開く"
+msgstr "オープン"
 
 #. module: account
 #: view:account.config.settings:0
@@ -7521,7 +7521,7 @@ msgstr "この請求書を本当に開きますか？"
 #. module: account
 #: field:account.chart.template,property_account_expense_opening:0
 msgid "Opening Entries Expense Account"
-msgstr "費用勘定の開始エントリー"
+msgstr "期初エントリ費用勘定"
 
 #. module: account
 #: view:account.invoice:0
@@ -10047,7 +10047,7 @@ msgstr "貸方"
 #. module: account
 #: view:account.invoice:0
 msgid "Draft Invoice "
-msgstr ""
+msgstr "ドラフト請求書 "
 
 #. module: account
 #: model:ir.ui.menu,name:account.menu_account_general_journal
